--- a/package.json
+++ b/package.json
@@ -19,19 +19,32 @@
     "@angular/forms": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/android-permissions": "^4.7.0",
     "@ionic-native/core": "4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
     "@ionic/storage": "2.2.0",
+    "cordova-plugin-android-permissions": "1.0.2",
+    "freeice": "^2.2.2",
+    "hark": "^1.2.3",
     "ionic-angular": "3.9.9",
     "ionicons": "3.0.0",
+    "openvidu-browser": "^2.12.0",
+    "platform": "^1.3.5",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "uuid": "^3.4.0",
+    "wolfy87-eventemitter": "^5.2.9",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
     "typescript": "2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-android-permissions": {}
+    }
+  }
 }
